Improve and fix alignment of header items

--- a/Generic Word Game_files/SpellingCee.css
+++ b/Generic Word Game_files/SpellingCee.css
@@ -18,12 +18,6 @@
     display: flex;
     flex-direction: row;
   }
-  #SpellingCee .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 5px;
-  }
   #SpellingCee p {
     margin-block-end: 0;
     margin-block-start: 0;
